Fixed overflow using overflow-x

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6,6 +6,7 @@
 body {
   font-family: Banana;
   padding: 0;
+  overflow-x:hidden;
 }
 
 .main-cta {
@@ -27,8 +28,8 @@ body {
 
 .success-text {
   font-size: 42px;
-  width: 500px;
-  top: 22.5%;
+  width: auto;
+  top: 45%;
   text-align:center;
 }
 
@@ -112,6 +113,21 @@ body {
 }
 .dropdown{
   cursor:pointer;
+}
+
+.slide-in {
+  opacity:0;
+  transition:all .82s;
+}
+.align-left.slide-in {
+  transform:translateX(-30%) scale(0.95);
+}
+.align-right.slide-in {
+  transform:translateX(30%) scale(0.95);
+}
+.slide-in.active {
+  opacity:1;
+  transform:translateX(0%) scale(1);
 }
 /* END EDITING BLOCK */
 .cloud {
